--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <div class="aboutMeNav">
                 <a onclick="scrollToSection('aboutStart')">About me</a>
                 <a onclick="scrollToSection('projectStart')">Projects</a>
-                <a>Education</a>
+                <a onclick="scrollToSection('educationStart')">Education</a>
             </div>
             <div class="hiddenNav">
                 <a>&darr;</a>
@@ -116,19 +116,19 @@
         <div class="education" id="educationStart">
             <div class="educationContent">
                 <div>
-                    <h3><b>one</b></h3>
+                    <p><b>Software Development Skills Bootcamp, Just IT</b></p>
                     <p>one content</p>
                 </div>
             </div>
             <div class="educationContent">
                 <div>
-                    <h3><b>one</b></h3>
+                    <p><b>CS50's Introduction to Programming with Python, Harvard</b></p>
                     <p>one content</p>
                 </div>
             </div>           
             <div class="educationContent">
                 <div>
-                    <h3><b>one</b></h3>
+                    <p><b>one</b></p>
                     <p>one content</p>
                 </div>
             </div>              
