--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
     <div class="margin">
         <div class="h1">
             <h1 id="h1Content">
-                Hello, my name is Alex. I am an aspiring software developer/software engineer,
-                based in London.  <br><br> Learn more about me below
+                Hello, my name is Alex. I am an aspiring <span id="standOutWords"> Software Engineer </span><br>
+                based in London.  <br><br> Learn more about me <a onclick="scrollToSection('aboutStart')" class="customA" id="standOutWords"> here </a>
             </h1>
         </div>
         <h1 class="titles"> About me</h1>
@@ -117,19 +117,31 @@
             <div class="educationContent">
                 <div>
                     <p><b>Software Development Skills Bootcamp, Just IT</b></p>
-                    <p>one content</p>
+                    <ul>
+                        <li>Coffee</li>
+                        <li>Tea</li>
+                        <li>Milk</li>
+                    </ul>
                 </div>
             </div>
             <div class="educationContent">
                 <div>
                     <p><b>CS50's Introduction to Programming with Python, Harvard</b></p>
-                    <p>one content</p>
+                    <ul>
+                        <li>Coffee</li>
+                        <li>Tea</li>
+                        <li>Milk</li>
+                    </ul>
                 </div>
             </div>           
             <div class="educationContent">
                 <div>
-                    <p><b>one</b></p>
-                    <p>one content</p>
+                    <p><b>A level Japanese, Maths, Physics</b></p>
+                    <ul>
+                        <li>Coffee</li>
+                        <li>Tea</li>
+                        <li>Milk</li>
+                    </ul>
                 </div>
             </div>              
         </div>
@@ -151,7 +163,7 @@
                     <input type="submit" value="Submit" class = "Button" id="submitButton">
                 </div>
             </form>
-            <h2 class="h2"><b>Or email me at 12acomach@gmail.com</b></h2>
+            <h2><b>Or email me at 12acomach@gmail.com</b></h2>
         </div>
         
         
