--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="nav_container">
-        <img src="../Images/smiley face.png" class="logo" alt="smile">
+        <img src="../Images/light.png" class="logo" alt="smile">
 
         <nav>
             <div class="aboutMeNav">
