--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
             <div class="aboutMeNav">
                 <a onclick="scrollToSection('aboutStart')">About me</a>
                 <a onclick="scrollToSection('projectStart')">Projects</a>
-                <a onclick="scrollToSection('educationStart')">Education</a>
+                <!-- <a onclick="scrollToSection('educationStart')">Education</a> -->
             </div>
             <div class="hiddenNav">
                 <a>&darr;</a>
                 <div class="hiddenNav-content">
                     <a onclick ="scrollToSection('aboutStart')">About me</a>
                     <a onclick="scrollToSection('projectStart')">Projects</a>
-                    <a onclick="scrollToSection('educationStart')">Education</a>
+                    <!-- <a onclick="scrollToSection('educationStart')">Education</a> -->
                 </div>
             </div>
         </nav>
@@ -36,7 +36,7 @@
     </div>
     <div class="PDFPage">
         <button id="exitCV">X</button>
-        <iframe src="../Images/Alex CV (4).pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe>
+        <iframe src="../Images/Software Development Bootcamp CV.pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe> <!-- make sure to change the CV-->
     </div>
     <div class="margin">
         <div class="h1">
@@ -52,7 +52,7 @@
                     <h3><b>Who am I?</b></h3>
                     <p>
                         Hello, my name is Alex Comach. I am an aspiring software developer/engineer, 
-                        I am currently 24 years old and looking to enter the tech industry as a 
+                        I am currently looking to enter the tech industry as a 
                         Junior dev or through an apprenticeship scheme. 
                     </p>
                 </div>
@@ -74,8 +74,9 @@
             <div class="aboutMeContent">
                 <div>
                     <h3><b>Resume</b></h3>
-                    <a><img src="../Images/Alex CV (4)-1.png" id="CVImage" alt="smile"></a>
-                    <p>or download <a href="../Images/Alex CV (4).pdf" download="Alex CV (4).pdf" id="customA_text">here</a></p>
+                    <p>click the icon</p>
+                    <a><img src="../Images/Software Development Bootcamp CV-1.png" id="CVImage" alt="smile"></a>
+                    <p>or download <a href="../Images/Software Development Bootcamp CV.pdf" download="Software Development Bootcamp CV.pdf" id="customA_text">here</a></p> <!-- change this as well make sure to download it-->
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
             
         </div>
 
-        <h1 class="titles" id="educationStart">Education</h1>
+        <!-- <h1 class="titles" id="educationStart">Education</h1>
         <div class="education">
             <div class="educationContent">
                 <div>
@@ -142,7 +143,7 @@
                     </ul>
                 </div>
             </div>              
-        </div>
+        </div> -->
 
 
         <h1 class="titles" id="contactStart">Contact me</h1>
