--- a/main.html
+++ b/main.html
@@ -28,8 +28,8 @@
             </div>
         </nav>
         <nav class="login"> <!-- If adding change the size of login class-->
-            <a id="toggling">Night</a>
-            <a href="https://github.com/AlexComach" target="_blank">Github</a>
+            <a id="toggling"><img src = "../Images/Dark Mode.png" id="LightDarkIcons"></a>
+            <a href="https://github.com/AlexComach" target="_blank"><img src="../Images/Github_Invertocat_Dark.png" class="logo" id="GitHubIcons" alt="smile"></a>
             <a onclick="scrollToSection('contactStart')" id="contactButton">Contact</a>
 
         </nav>
@@ -41,7 +41,7 @@
     <div class="margin">
         <div class="h1">
             <h1>
-                Hello, my name is Alex. I am an aspiring <span id="standOutWords"> Software Engineer </span><br>
+                Hello, my name is Alex. I am an aspiring <span id="standOutWords"> Software Developer </span><br>
                 based in London.  <br><br> Learn more about me <a onclick="scrollToSection('aboutStart')" class="customA_h1" id="standOutWords"> here </a>
             </h1>
         </div>
