--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <nav class="login"> <!-- If adding change the size of login class-->
-            <a id="toggling"><img src = "../Images/Dark Mode.png" id="LightDarkIcons"></a>
+            <a id="toggling"><img src = "../Images/Dark Mode.png" class="logo" id="LightDarkIcons"></a>
             <a href="https://github.com/AlexComach" target="_blank"><img src="../Images/Github_Invertocat_Dark.png" class="logo" id="GitHubIcons" alt="smile"></a>
             <a onclick="scrollToSection('contactStart')" id="contactButton">Contact</a>
 
@@ -40,9 +40,9 @@
     </div>
     <div class="margin">
         <div class="h1">
-            <h1>
+            <h1 id="h1Text">
                 Hello, my name is Alex. I am an aspiring <span id="standOutWords"> Software Developer </span><br>
-                based in London.  <br><br> Learn more about me <a onclick="scrollToSection('aboutStart')" class="customA_h1" id="standOutWords"> here </a>
+                based in London.  <br><br> Learn more about me <a onclick="scrollToSection('aboutStart')" id="customA_h1"> here </a>
             </h1>
         </div>
         <h1 class="titles" id="aboutStart"> About me</h1>
@@ -76,7 +76,7 @@
                     <h3><b>Resume</b></h3>
                     <p>click the icon</p>
                     <a><img src="../Images/Software Development Bootcamp CV-1.png" id="CVImage" alt="smile"></a>
-                    <p>or download <a href="../Images/Software Development Bootcamp CV.pdf" download="Software Development Bootcamp CV.pdf" id="customA_text">here</a></p> <!-- change this as well make sure to download it-->
+                    <p>or download <a href="../Images/Software Development Bootcamp CV.pdf" download="Software Development Bootcamp CV.pdf" id="customA_text_about">here</a></p> <!-- change this as well make sure to download it-->
                 </div>
             </div>
         </div>
