--- a/main.html
+++ b/main.html
@@ -51,9 +51,7 @@
                 <div>
                     <h3><b>Who am I?</b></h3>
                     <p>
-                        Hello, my name is Alex Comach. I am an aspiring software developer/engineer, 
-                        I am currently looking to enter the tech industry as a 
-                        Junior dev or through an apprenticeship scheme. 
+                        Hello, I’m Alex Comach, an aspiring software developer with a passion for problem-solving and building real-world solutions. I’m eager to break into the tech industry as a Junior Developer or through an apprenticeship, always looking to learn, adapt, and grow. I love diving into new technologies and finding creative ways to tackle challenges.
                     </p>
                 </div>
     
