--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 
         <nav>
             <div class="aboutMeNav">
-                <a onclick="scrollToSection('aboutStart')">About me</a>
-                <a onclick="scrollToSection('projectStart')">Projects</a>
+                <a onclick="scrollToSection('aboutStart')">- About Me -</a>
+                <a onclick="scrollToSection('projectStart')">- Projects -</a>
                 <!-- <a onclick="scrollToSection('educationStart')">Education</a> -->
             </div>
             <div class="hiddenNav">
@@ -40,9 +40,15 @@
     </div>
     <div class="margin">
         <div class="h1">
-            <h1 id="h1Text">
-                Hello, my name is Alex. I am an aspiring <span id="standOutWords"> Software Developer </span><br>
-                based in London.  <br><br> Learn more about me <a onclick="scrollToSection('aboutStart')" id="customA_h1"> here </a>
+            <h1 id="h1Hello">
+                Hello!<br>I'm Alex.
+            </h1>
+            <h1 id="h1Me">
+                I'm an aspiring <span> Software Developer </span>
+                based in London.
+            </h1>
+            <h1 id="h1Learn">
+                Learn more about me <a onclick="scrollToSection('aboutStart')" id="customA_h1"> here </a>
             </h1>
         </div>
         <h1 class="titles" id="aboutStart"> About me</h1>
