--- a/main.html
+++ b/main.html
@@ -72,10 +72,12 @@
                     <h3><b>Languages</b></h3>
                     <p>
                         The current Languages I am familiar with are as follows:
-                        <span id="standOutWords"> HTML </span>,
-                        <span id="standOutWords"> CSS </span>,
-                        <span id="standOutWords"> Javascript </span>,
-                        and <span id="standOutWords"> Python </span>.
+                        <span id="standOutWords">HTML</span>,
+                        <span id="standOutWords"> CSS</span>,
+                        <span id="standOutWords"> Javascript</span>,
+                        <span id="standOutWords"> SQL</span>,
+                        and <span id="standOutWords">Python</span>.
+                        I am also familiar with <span id="standOutWords">Git</span>.
                 
                     </p>
                 </div>
@@ -96,9 +98,9 @@
                 <div>
                     <h3><b>Website Portfolio</b></h3>
                     <p>
-                        I made this website portfolio, using <span id="standOutWords"> HTML </span>,
-                        <span id="standOutWords"> CSS </span> and
-                        <span id="standOutWords"> Javascript </span>.
+                        I made this website portfolio, using <span id="standOutWords">HTML</span>,
+                        <span id="standOutWords"> CSS</span> and
+                        <span id="standOutWords">Javascript</span>.
                         It includes a working form which sends to my email through the use
                         of an API called web3forms. It also has smooth scrolling between sections,
                         with a minimalistic design. It will be uploaded to my Github, link <a href="https://github.com/AlexComach/Portfolio" target="_blank" id="customA_text">here</a>.
@@ -107,11 +109,21 @@
             </div>
             <div class="projectContent">
                 <div>
+                    <h3><b>Expense Tracker</b></h3>
+                    <p>
+                        I made this project using <span id="standOutWords">Python</span> and <span id="standOutWords">SQL</span>. It is an Expense tracker, which asks for a purchase log, stores the log, and then adds
+                        the log to a list which has the option to be viewed and broken down. It is connected to an SQL server which whilst currently in the works, will store the logs in a database.
+                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Expense-Tracker" target="_blank" id="customA_text">here</a>. 
+                    </p>
+                </div>
+            </div>
+            <div class="projectContent">
+                <div>
                     <h3><b>Runescape Shopping Cart</b></h3>
                     <p>
-                        I made this project in <span id="standOutWords"> Python </span> for my online CS50 Python course. It is a Runescape shopping cart, which when an item is inputted,
-                        it takes the price from the runescape wiki, adds it to a cart and then shows and stores the receipt in a csv file.
-                        It also has pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Final-Project-Python" target="_blank" id="customA_text">here</a>. I have also recorded a video demo below: 
+                        I made this project in <span id="standOutWords">Python</span>. It is a Runescape shopping cart, which when an item is inputted,
+                        it takes the price from the runescape wiki, adds it to a cart and then shows and stores the receipt in a csv file in a JSON format.
+                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Final-Project-Python" target="_blank" id="customA_text">here</a>. I have also recorded a video demo below: 
                         <br><br>
                         <iframe src="https://www.youtube.com/embed/i2ielUbGe50?si=aGyLb4KLuoHrAy8P" class="youtubeIframe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </p>
