--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     </div>
     <div class="PDFPage">
         <button id="exitCV">X</button>
-        <iframe src="../Images/Software Development Bootcamp CV.pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe> <!-- make sure to change the CV-->
+        <iframe src="../Images/Alex Comach CV.docx.pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe> <!-- make sure to change the CV-->
     </div>
     <div class="margin">
         <div class="h1">
@@ -87,7 +87,7 @@
                     <h3><b>Resume</b></h3>
                     <p>click the icon</p>
                     <a><img src="../Images/Software Development Bootcamp CV-1.png" id="CVImage" alt="smile"></a>
-                    <p>or download <a href="../Images/Software Development Bootcamp CV.pdf" download="Software Development Bootcamp CV.pdf" id="customA_text_about">here</a></p> <!-- change this as well make sure to download it-->
+                    <p>or download <a href="../Images/Alex Comach CV.docx.pdf" download="Alex Comach CV.docx.pdf" id="customA_text_about">here</a></p> <!-- change this as well make sure to download it-->
                 </div>
             </div>
         </div>
