--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@
                     <p>
                         I made this project in <span id="standOutWords">Python</span>. It is a Runescape shopping cart, which when an item is inputted,
                         it takes the price from the runescape wiki, adds it to a cart and then shows and stores the receipt in a csv file in a JSON format.
-                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Final-Project-Python" target="_blank" id="customA_text">here</a>. I have also recorded a video demo below: 
+                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Final-Project-Python" target="_blank" id="customA_text">here</a>. I have also recorded a video demo of my project below: 
                         <br><br>
                         <iframe src="https://www.youtube.com/embed/i2ielUbGe50?si=aGyLb4KLuoHrAy8P" class="youtubeIframe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </p>
