--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     </div>
     <div class="PDFPage">
         <button id="exitCV">X</button>
-        <iframe src="../Images/Alex Comach CV.docx.pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe> <!-- make sure to change the CV-->
+        <iframe src="../Images/Alex Comach Software CV.docx.pdf#zoom=75" id="CV_PDF" scrolling="auto"></iframe> <!-- make sure to change the CV-->
     </div>
     <div class="margin">
         <div class="h1">
@@ -87,33 +87,21 @@
                     <h3><b>Resume</b></h3>
                     <p>click the icon</p>
                     <a><img src="../Images/Software Development Bootcamp CV-1.png" id="CVImage" alt="smile"></a>
-                    <p>or download <a href="../Images/Alex Comach CV.docx.pdf" download="Alex Comach CV.docx.pdf" id="customA_text_about">here</a></p> <!-- change this as well make sure to download it-->
+                    <p>or download <a href="../Images/Alex Comach Software CV.docx.pdf" download="Alex Comach Software CV.docx.pdf" id="customA_text_about">here</a></p> <!-- change this as well make sure to download it-->
                 </div>
             </div>
         </div>
         <h1 class="titles" id="projectStart"> Projects</h1>
-        
         <div class="project" >
-            <div class="projectContent">
-                <div>
-                    <h3><b>Website Portfolio</b></h3>
-                    <p>
-                        I made this website portfolio, using <span id="standOutWords">HTML</span>,
-                        <span id="standOutWords"> CSS</span> and
-                        <span id="standOutWords">Javascript</span>.
-                        It includes a working form which sends to my email through the use
-                        of an API called web3forms. It also has smooth scrolling between sections,
-                        with a minimalistic design. It will be uploaded to my Github, link <a href="https://github.com/AlexComach/Portfolio" target="_blank" id="customA_text">here</a>.
-                    </p>
-                </div>
-            </div>
             <div class="projectContent">
                 <div>
                     <h3><b>Expense Tracker</b></h3>
                     <p>
                         I made this project using <span id="standOutWords">Python</span> and <span id="standOutWords">SQL</span>. It is an Expense tracker, which asks for a purchase log, stores the log, and then adds
-                        the log to a list which has the option to be viewed and broken down. It is connected to an SQL server which whilst currently in the works, will store the logs in a database.
-                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Expense-Tracker" target="_blank" id="customA_text">here</a>. 
+                        the log to a list which has the option to be viewed and broken down. It is connected to an SQL server which stores the logs in a database.
+                        It also has testing using pytest. This be also on my Github, link <a href="https://github.com/AlexComach/Expense-Tracker" target="_blank" id="customA_text">here</a>. I have also recorded a video demo below:
+                        <br><br>
+                        <iframe src="https://www.youtube.com/embed/lb4RyU40ZyU?si=qKeOBff1RNfgkVQh" class="youtubeIframe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </p>
                 </div>
             </div>
@@ -129,7 +117,21 @@
                     </p>
                 </div>
             </div>
-            
+            <div class="projectContent">
+                <div>
+                    <h3><b>To Do List</b></h3>
+                    <p>
+                        I made this To Do List, using <span id="standOutWords">HTML</span>,
+                        <span id="standOutWords"> CSS</span> and
+                        <span id="standOutWords">Javascript</span>.
+                        It is a webpage which allows the user to add and remove inputted tasks from the list, and then prints the tasks onto another page, where 
+                        you can check boxes if tasks are completed. It is still a work in progress. It will be uploaded to my Github, link <a href="https://github.com/AlexComach/To-Do-List" target="_blank" id="customA_text">here</a>.
+                        I have also recorded a video demo below:
+                        <br><br>
+                        <iframe src="https://www.youtube.com/embed/OdJ4YHTVDMU?si=krSGCGSzkGVoHp8F" class="youtubeIframe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </p>
+                </div>
+            </div>
         </div>
 
         <!-- <h1 class="titles" id="educationStart">Education</h1>
